[gd_scene load_steps=6 format=3 uid="uid://dvs5rmxlaoisv"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_fde46"]
[ext_resource type="PackedScene" uid="uid://btybcx164yt1u" path="res://Scenes/FilterTV.tscn" id="2_wtp4n"]
[ext_resource type="Theme" uid="uid://3qammly741kk" path="res://Scenes/Utils/Font.tres" id="3_3q7sy"]
[ext_resource type="Texture2D" uid="uid://b2n5h6etytg3l" path="res://assets/mainmenu.png" id="3_qb2pl"]
[ext_resource type="AudioStream" uid="uid://bnw3l602ifs7m" path="res://assets/Musics/surprise.wav" id="5_jw5kw"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fde46")

[node name="FilterTV" parent="." instance=ExtResource("2_wtp4n")]

[node name="Mainmenu" type="Sprite2D" parent="."]
position = Vector2(575.75, 320.25)
texture = ExtResource("3_qb2pl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 596.0
offset_top = 359.0
offset_right = 1000.0
offset_bottom = 429.0
theme = ExtResource("3_3q7sy")

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(80.34, 26.8)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.768627, 0.254902, 0.478431, 1)
text = "Volume"

[node name="Volume" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(284.815, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 453.0
offset_right = 919.0
offset_bottom = 580.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 39
alignment = 1

[node name="Surprise" type="Button" parent="HFlowContainer"]
layout_mode = 2
text = "Surprise"

[node name="Button" type="Button" parent="HFlowContainer"]
layout_mode = 2
text = "Retour en arri√®re"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jw5kw")
volume_db = 10.0

[connection signal="value_changed" from="HBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="HFlowContainer/Surprise" to="." method="_on_button"]
[connection signal="pressed" from="HFlowContainer/Button" to="." method="_on_button_pressed"]
